Fixed image scrolling on ios devices

--- a/src/styles/components/Image.scss
+++ b/src/styles/components/Image.scss
@@ -18,6 +18,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    touch-action: none;
 
     img {
       max-width: 85%;
